# advent-of-code

./: .gitignore  pyproject.toml
solutions/: day-01-report-repair.ipynb
solutions_2021/: Solution For 2021-12-01.ipynb  Solution For 2021-12-02.ipynb  Solution For 2021-12-03.ipynb  Solution For 2021-12-04.ipynb  Solution For 2021-12-05.ipynb  Solution For 2021-12-06.ipynb  Solution For 2021-12-07.ipynb  Solution For 2021-12-08.ipynb  Solution For 2021-12-09.ipynb  Solution For 2021-12-10.ipynb  Solution For 2021-12-11.ipynb  Solution For 2021-12-12.ipynb  Solution For 2021-12-13.ipynb  Solution For 2021-12-14.ipynb  Solution For 2021-12-16.ipynb  Untitled.ipynb
solutions_2024/: aoc_2024-12-01.py  aoc_2024-12-02.py  aoc_2024-12-03.py
