[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Sally Hong <sally.hong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
